exports[`<Filters /> matches previous snapshot 1`] = `
<section
  className="filters">
  <div
    className="row">
    <div
      className="col-xs-12">
      <span
        className="form-group-title">
        Filter
      </span>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="category-filter">
            Category
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="category-filter"
            onChange={[Function anonymous]} />
        </div>
      </div>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="segment-filter">
            Branch/Discipline
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="segment-filter"
            onChange={[Function anonymous]} />
        </div>
      </div>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="platform-filter">
            Platform
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="platform-filter"
            onChange={[Function anonymous]} />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-xs-12 text-right">
      <button
        className="btn fn-primary reset-filters-button"
        onClick={[Function anonymous]}>
        Reset Filters
      </button>
    </div>
  </div>
</section>
`;

exports[`<Filters /> matches previous snapshot 2`] = `
<section
  className="filters">
  <div
    className="row">
    <div
      className="col-xs-12">
      <span
        className="form-group-title">
        Filter
      </span>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="category-filter">
            Category
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="category-filter"
            onChange={[Function anonymous]}>
            <option
              value="value1">
              title1
            </option>
            <option
              value="value2">
              title2
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="segment-filter">
            Branch/Discipline
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="segment-filter"
            onChange={[Function anonymous]} />
        </div>
      </div>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="platform-filter">
            Platform
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="platform-filter"
            onChange={[Function anonymous]} />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-xs-12 text-right">
      <button
        className="btn fn-primary reset-filters-button"
        onClick={[Function anonymous]}>
        Reset Filters
      </button>
    </div>
  </div>
</section>
`;

exports[`<Filters /> matches previous snapshot 3`] = `
<section
  className="filters">
  <div
    className="row">
    <div
      className="col-xs-12">
      <span
        className="form-group-title">
        Filter
      </span>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="category-filter">
            Category
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="category-filter"
            onChange={[Function anonymous]}>
            <option
              value="value1">
              title1
            </option>
            <option
              value="value2">
              title2
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="segment-filter">
            Branch/Discipline
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="segment-filter"
            onChange={[Function anonymous]}>
            <option
              value="value1">
              title1
            </option>
            <option
              value="value2">
              title2
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="platform-filter">
            Platform
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="platform-filter"
            onChange={[Function anonymous]} />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-xs-12 text-right">
      <button
        className="btn fn-primary reset-filters-button"
        onClick={[Function anonymous]}>
        Reset Filters
      </button>
    </div>
  </div>
</section>
`;

exports[`<Filters /> matches previous snapshot 4`] = `
<section
  className="filters">
  <div
    className="row">
    <div
      className="col-xs-12">
      <span
        className="form-group-title">
        Filter
      </span>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="category-filter">
            Category
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="category-filter"
            onChange={[Function anonymous]}>
            <option
              value="value1">
              title1
            </option>
            <option
              value="value2">
              title2
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="segment-filter">
            Branch/Discipline
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="segment-filter"
            onChange={[Function anonymous]}>
            <option
              value="value1">
              title1
            </option>
            <option
              value="value2">
              title2
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="col-sm-4 col-xs-12">
      <div
        className="form-group">
        <div>
          <label
            className="control-label"
            htmlFor="platform-filter">
            Platform
          </label>
          <select
            className="form-control"
            defaultValue={undefined}
            id="platform-filter"
            onChange={[Function anonymous]}>
            <option
              value="value1">
              title1
            </option>
            <option
              value="value2">
              title2
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row">
    <div
      className="col-xs-12 text-right">
      <button
        className="btn fn-primary reset-filters-button"
        onClick={[Function anonymous]}>
        Reset Filters
      </button>
    </div>
  </div>
</section>
`;
